# template

./: cookiecutter.json  test_template.py
hooks/: post_gen_project.py
{{ cookiecutter.repository_name }}/: .pre-commit-config.yaml  README.md  TROUBLESHOOTING.md  env.yaml  install_pytorch.py  pyproject.toml  setup.cfg  test_installation.py
{{ cookiecutter.repository_name }}/.github/workflows/: publish.yml  test_suite.yml
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/utils/: hf_io.py
{{ cookiecutter.repository_name }}/tests/: test_checkpoint.py
