[metadata]
name = {{ cookiecutter.repository_name }}
description = {{ cookiecutter.project_description }}
url = {{ cookiecutter.repository_url }}
long_description = file: README.md
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.4.*
    anypy==0.0.*

    # Core ML dependencies
    lightning>=2.5.0
    torchmetrics>=1.8.0
    hydra-core>=1.3.0
    
    # Data science and ML libraries
    pandas
    scikit-learn
    scipy
    h5py
    statsmodels
    fastparquet
    
    # Visualization
    matplotlib
    contourpy
    seaborn
    
    # PyTorch ecosystem
    torch
    torchvision
    torch_geometric
    
    # Other dependencies
    wandb
    streamlit
    rich
    dvc
    python-dotenv
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
